--- a/_patterns/00-atoms/04-images/01-landscape-4x3.html
+++ b/_patterns/00-atoms/04-images/01-landscape-4x3.html
@@ -1,3 +1,3 @@
 ---
 ---
-<img src="{{ img.landscape-4x3.src }}" alt="{{ img.landscape-4x3.alt }}" />
+<img src="holder.js/600x450" alt="{{ img.landscape-4x3.alt }}" />
