--- a/_patterns/00-atoms/04-images/02-landscape-16x9.html
+++ b/_patterns/00-atoms/04-images/02-landscape-16x9.html
@@ -1,3 +1,3 @@
 ---
 ---
-<img src="{{ img.landscape-16x9.src }}" alt="{{ img.landscape-16x9.alt }}" />
+<img src="holder.js/1280x720" alt="{{ img.landscape-16x9.alt }}" />
