Change style guide to portfolio and primer.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@ layout: default
 
 <div class="home">
 
-  <a href="{{ '/styleguide.html' | prepend: site.baseurl }}"><h1 class="page-heading">Styleguide</h1></a>
+  <a href="{{ '/portfolio.html' | prepend: site.baseurl }}"><h1 class="page-heading">Portfolio</h1></a>
+  <a href="{{ '/primer.html' | prepend: site.baseurl }}"><h1 class="page-heading">Primer</h1></a>
 
 
 </div>
